wip: validate nested
