# src/application/controller/exam.controller.ts
@@ -1,7 +1,7 @@
 import { Body, Controller, Get, Path, Post, /* Response as ApiResponse,  */Route, Tags, Inject, SuccessResponse } from "tsoa";
 import { ExamService } from "../../domain/service/exam.service";
-import { Exam } from "../../domain/entity/exam/Exam";
-import { ICreateExamDTO } from "../../domain/entity/exam/create-exam.dto";
+import { Exam } from "../../domain/entity/exam/exam.entity";
+import { CreateExamDTO } from "../../domain/entity/exam/create-exam.dto";
 import { Request, Response } from "express";
 // import { responseCreateExam } from "src/infrastructure/dataset/exam.data";
 // import { responseCreateExam } from "../../infrastructure/dataset/exam.data";
@@ -23,7 +23,7 @@ export class ExamController extends Controller {
 	public async postExam(
 		@Inject() req: Request,
 		@Inject() res: Response,
-		@Body() newEntity: ICreateExamDTO
+		@Body() newEntity: CreateExamDTO
 	)/* : Promise<Exam | string[]> */ {
 
 		const result = await this._service.newExamTeste(newEntity);
@@ -47,5 +47,22 @@ export class ExamController extends Controller {
 		@Path() id: string
 	): Promise<Exam | null> {
 		return await this._service.findExam(id);
+	}
+
+	@Get("/:id/full")
+	public async getExamFull(
+		@Inject() req: Request,
+		@Inject() res: Response,
+		@Path() id: string
+	): Promise<Exam | string[]> {
+		const result = await this._service.findExamFull(id);
+
+		if (result instanceof Exam) {
+			res.status(200).send(result);
+			return result;
+		} else {
+			res.status(422).send(result._notifications);
+			return result._notifications;
+		}
 	}
 }
